tests/baselines/reference/propertyAssignment.errors.txt
tests/cases/compiler/propertyAssignment.ts(4,13): error TS1170: A computed property name in a type literal must directly refer to a built-in symbol.
tests/cases/compiler/propertyAssignment.ts(4,14): error TS2304: Cannot find name 'index'.
tests/cases/compiler/propertyAssignment.ts(12,1): error TS2322: Type '{ x: 数字; }' is not assignable to type '新建 () => 任意'.
  Type '{ x: 数字; }' provides no match for the signature 'new (): any'.
tests/cases/compiler/propertyAssignment.ts(14,1): error TS2322: Type '{ x: 数字; }' is not assignable to type '() => 无值'.
  Type '{ x: 数字; }' provides no match for the signature '(): void'.


==== tests/cases/compiler/propertyAssignment.ts (4 errors) ====
    var foo1: { new ():any; }   
    var bar1: { x : number; }
    
    var foo2: { [index]; } // should be an error, used to be indexer, now it is a computed property
                ~~~~~~~
!!! error TS1170: A computed property name in a type literal must directly refer to a built-in symbol.
                 ~~~~~
!!! error TS2304: Cannot find name 'index'.
    var bar2: { x : number; }
    
    var foo3: { ():void; }
    var bar3: { x : number; }
    
    
    
    foo1 = bar1; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: 数字; }' is not assignable to type '新建 () => 任意'.
!!! error TS2322:   Type '{ x: 数字; }' provides no match for the signature 'new (): any'.
    foo2 = bar2; 
    foo3 = bar3; // should be an error
    ~~~~
!!! error TS2322: Type '{ x: 数字; }' is not assignable to type '() => 无值'.
!!! error TS2322:   Type '{ x: 数字; }' provides no match for the signature '(): void'.